# pleroma-rss

./: CHANGELOG.md  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: assets.yml  ci.yml  release.yml
src/: config.rs  errors.rs  main.rs  utils.rs
src/bot/: image.rs  mod.rs  rss.rs
src/cli/: mod.rs  parser.rs  utils.rs
