[package]
name = "pleroma-rss"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/TheAwiteb/pleroma-rss"
description = "A Pleroma bot that sends RSS feeds to your followers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.38"
url = "2.3.1"

[profile.release]
opt-level = 's'
lto = true
debug = false
codegen-units = 1
panic = "abort"
strip = true