[package]
name = "pleroma-rss"
version = "0.2.0"
edition = "2021"
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/TheAwiteb/pleroma-rss"
description = "A Pleroma bot that sends RSS feeds to your followers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
log = "0.4.17"
megalodon = "0.5.0"
pretty_env_logger = "0.4.0"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["json"] }
rss = "2.0.2"
thiserror = "1.0.38"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
url = "2.3.1"
urlencoding = "2.1.2"

[profile.release]
opt-level = 's'
lto = true
debug = false
codegen-units = 1
panic = "abort"
strip = true
